# devops-engineer-from-scratch-project-313

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  database.py  main.py  nginx.conf.template  package-lock.json  package.json  pyproject.toml  ruff.toml  start.sh
.github/workflows/: ci.yml
docs/superpowers/plans/: 2025-05-25-frontend-cors.md
docs/superpowers/specs/: 2025-05-25-frontend-cors-design.md
tests/: test_main.py
